objects/ssot__LearningProgramPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DraftPlanContent__c</fullName>
        <label>Draft Plan Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Program Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramId__c</fullName>
        <label>Learning Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumProgramGradePointAvgNumber__c</fullName>
        <label>Minimum Program Grade Point Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderId__c</fullName>
        <label>Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817708184_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningProgramPlan_ProviderId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LearningProgramPlan_ProviderId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1719817708184_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819886410_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningProgramPlan_LearningProgramI_rel</label>
        <referenceTo>ssot__LearningProgram__dlm</referenceTo>
        <relationshipLabel>LearningProgramPlan_LearningProgramI_rel</relationshipLabel>
        <relationshipName>rel_1719819886410_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>